--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "gagaptaszek",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "Wesele Magdaleny i Damiana",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Damian Ptaszynski <damian.ptaszynski@gmail.com>",
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@fontsource/merriweather": "^5.0.3",
     "@fontsource-variable/montserrat": "^5.0.4",
+    "@fontsource/carattere": "^5.0.8",
+    "@fontsource/merriweather": "^5.0.3",
     "gatsby": "^5.12.4",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-feed": "^5.12.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-plugin-typography": "^5.12.0",
     "gatsby-remark-images": "^7.12.0",
     "gatsby-remark-prismjs": "^7.12.0",
     "gatsby-remark-responsive-iframe": "^6.12.0",
@@ -23,7 +27,10 @@
     "gatsby-transformer-sharp": "^5.12.0",
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-typography": "^0.16.23",
+    "typography": "^0.16.24"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
